...
              decoration: BoxDecoration(
                color: FlutterFlowTheme.of(context).secondaryBackground,
              ),
              child: Padding(
                padding: EdgeInsets.all(24.0),
                child: Column(
                  key: ValueKey('Column_v5m4'),
                  mainAxisSize: MainAxisSize.max,
                  mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                  children: [
                    Align(
                      alignment: AlignmentDirectional(-1.0, 0.0),
                      child: Padding(
...
                                            .titleMediumIsCustom,
                                  ),
                              indicatorColor:
                                  FlutterFlowTheme.of(context).primary,
                              tabs: [
                                Tab(
                                  key: ValueKey('SignupTab_rtit'),
                                  text: FFLocalizations.of(context).getText(
                                    'lpjwin1c' /* Sign up */,
                                  ),
                                ),
                                Tab(
                                  key: ValueKey('LoginTab_cqp0'),
                                  text: FFLocalizations.of(context).getText(
                                    '0rv8pc31' /* Login */,
                                  ),
                                ),
                              ],
                              controller: _model.tabBarController,
...
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 15.0, 0.0, 0.0),
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('Signup-Email_f3we'),
                                            controller: _model
                                                .signupEmailTextController,
                                            focusNode:
                                                _model.signupEmailFocusNode,
                                            onChanged: (_) =>
                                                EasyDebounce.debounce(
...
                                          ),
                                        ),
                                      ),
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('Signup-Password_a9r2'),
                                          controller: _model
                                              .signupPasswordTextController,
                                          focusNode:
                                              _model.signupPasswordFocusNode,
                                          autofocus: false,
                                          enabled: true,
...
                                        ),
                                      ),
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey(
                                              'Signup-Confirm-Password_uld1'),
                                          controller: _model
                                              .signupConfirmPasswordTextController,
                                          focusNode: _model
                                              .signupConfirmPasswordFocusNode,
                                          autofocus: false,
                                          enabled: true,
...
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 15.0, 0.0, 0.0),
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('Login-Email_3m1l'),
                                            controller:
                                                _model.loginEmailTextController,
                                            focusNode:
                                                _model.loginEmailFocusNode,
                                            onChanged: (_) =>
                                                EasyDebounce.debounce(
...
                                          ),
                                        ),
                                      ),
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('Login-Password_o9kx'),
                                          controller: _model
                                              .loginPasswordTextController,
                                          focusNode:
                                              _model.loginPasswordFocusNode,
                                          autofocus: false,
                                          enabled: true,
...
                                Align(
                                  alignment: AlignmentDirectional(0.0, 1.0),
                                  child: Padding(
                                    padding: EdgeInsetsDirectional.fromSTEB(
                                        0.0, 0.0, 0.0, 20.0),
                                    child: FFButtonWidget(
                                      key: ValueKey('Login-Button_0q8t'),
                                      onPressed: () async {
                                        logFirebaseEvent(
                                            'SIGNUP_LOGIN_PAGE_Login-Button_ON_TAP');
                                        logFirebaseEvent(
                                            'Login-Button_validate_form');
                                        if (_model.formKey2.currentState ==
...
                                Align(
                                  alignment: AlignmentDirectional(0.0, 1.0),
                                  child: Padding(
                                    padding: EdgeInsetsDirectional.fromSTEB(
                                        0.0, 0.0, 0.0, 20.0),
                                    child: FFButtonWidget(
                                      key: ValueKey('Signup-Button_6xu1'),
                                      onPressed: () async {
                                        logFirebaseEvent(
                                            'SIGNUP_LOGIN_PAGE_Signup-Button_ON_TAP');
                                        logFirebaseEvent(
                                            'Signup-Button_validate_form');
                                        if (_model.formKey1.currentState ==
...
