...
                                          logFirebaseEvent('Text_navigate_to');

                                          context.goNamed(
                                              BaseMeetingPrepWidget.routeName);
                                        },
                                        child: Text(
                                          key: ValueKey('Text_kihw'),
                                          FFLocalizations.of(context).getText(
                                            'v447sgnj' /* See all */,
                                          ),
                                          style: FlutterFlowTheme.of(context)
                                              .titleLarge
                                              .override(
...
                                          logFirebaseEvent('Text_navigate_to');

                                          context
                                              .goNamed(EmailWidget.routeName);
                                        },
                                        child: Text(
                                          key: ValueKey('Text_zrwg'),
                                          FFLocalizations.of(context).getText(
                                            '8qd000ix' /* See all */,
                                          ),
                                          style: FlutterFlowTheme.of(context)
                                              .titleLarge
                                              .override(
...
